Module Filter 7.x-2.x, xxxx-xx-xx
---------------------------------
#2235553 by greenSkin: Fixed latest jquery_update breaks module filter.
#2304687 by mpdonadio: Fixed Remove hardcoded operations.
#2293029 by topsitemakers: Fixed Take header offset into account when selecting
  a tab.
#2290213 by topsitemakers: Minor typo in description - "has no affect" -> "has
  no effect".


Module Filter 7.x-2.0-alpha2, 2013-12-06
----------------------------------------
#2141743, #2141743 by greenSkin: Fixed issues related to the new dynamically
  positioned tabs and using the dynamically positioned save button.


Module Filter 7.x-2.0-alpha1, 2013-11-18
----------------------------------------
by greenSkin: Tabs now should always be visible while scrolling large lists of
  modules.
#1854348 by alexweber, greenSkin: Make filter textfield wider on modules page
  when viewing as tabs.
by greenSkin: Fixed what was suppose to be a call to variable_set().
#1370492 by greenSkin: Remember selected tab after modules form submit.
by greenSkin: Changed the title for the 'module_filter_dynamic_save_position'
  checkbox to make it clearer what it does.
#1166414 by greenSkin: Fixed broken submit when tabs are disabled. We no longer
  reroute the theme of the system modules page unless tabs are enabled.
by greenSkin: Fixed issue on Available updates page where the update state
  would not be remembered.
by greenSkin: Fixed 7200 update to rebuild the theme registry at the same time
  as rebuilding the menu.
by greenSkin: Fixed issue relating to row coloring when enabling/disabling
  modules via switch due to recent fix for jQuery Update module.
by greenSkin: Added functionality to show recently enabled/disabled modules.
#1710230 by littlekoala, greenSkin: Fixed On | Off buttons does not change
  state with jquery_update() module active.
by greenSkin: Added description to filter textfield on permissions page.
by greenSkin: Added filter to user permissions page.